[gd_scene load_steps=14 format=3 uid="uid://c5ewd6uct6rus"]

[ext_resource type="Script" path="res://scenes/characters/NPC/Koala/koala.gd" id="1_gy0xo"]
[ext_resource type="Texture2D" uid="uid://bxf77rwl4ei8r" path="res://assets/character/NPCS/Koala-sheet.png" id="1_uhs8p"]
[ext_resource type="PackedScene" uid="uid://dhj03oci7ou6e" path="res://scenes/characters/NPC/Koala/npc_2_dialouge.tscn" id="2_5kbgt"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4imma"]
atlas = ExtResource("1_uhs8p")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_17f8p"]
atlas = ExtResource("1_uhs8p")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i5pbl"]
atlas = ExtResource("1_uhs8p")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c8lfs"]
atlas = ExtResource("1_uhs8p")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j7o1m"]
atlas = ExtResource("1_uhs8p")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5035d"]
atlas = ExtResource("1_uhs8p")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b3214"]
atlas = ExtResource("1_uhs8p")
region = Rect2(192, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_hqik0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4imma")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_17f8p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i5pbl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c8lfs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j7o1m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5035d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b3214")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_17npc"]
size = Vector2(28, 33)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h0gfh"]
size = Vector2(79, 38)

[node name="Koala" type="CharacterBody2D"]
position = Vector2(1, 0)
script = ExtResource("1_gy0xo")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_hqik0")
autoplay = "default"
frame_progress = 0.547394

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_17npc")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(30.5, -11)
shape = SubResource("RectangleShape2D_h0gfh")

[node name="npc2_dialouge" parent="." instance=ExtResource("2_5kbgt")]
offset_left = -85.0
offset_top = -53.0
offset_right = -85.0
offset_bottom = -53.0
scale = Vector2(0.335, 0.335)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="dialouge_finished" from="npc2_dialouge" to="." method="_on_npc_2_dialouge_dialouge_finished"]
